--- a/exercises/01.1-creating-multi-container-pod/solution/two-container-pod.yaml
+++ b/exercises/01.1-creating-multi-container-pod/solution/two-container-pod.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  labels:
+    run: two-containers
   name: two-containers
 spec:
 
-  restartPolicy: Never
-
   volumes:
-  - name: shared-data
-    emptyDir: {}
+    - name: shared-volume
+      emptyDir: {}
 
   containers:
-
-  - name: nginx-container
-    image: nginx
+  - image: nginx
+    name: nginx-containers
+    ports:
+    - containerPort: 80
     volumeMounts:
-    - name: shared-data
-      mountPath: /usr/share/nginx/html
+      - name: shared-volume
+        mountPath: /usr/share/nginx/html
 
-  - name: debian-container
-    image: debian
+  - image: debian
+    name: debian-container
+    command: ["/bin/sh", "-c", "while true; do echo $(date) >> /pod-data/index.html; sleep 1; done;"]
     volumeMounts:
-    - name: shared-data
-      mountPath: /pod-data
-    command: ["/bin/sh"]
-    args: ["-c", "echo Hello from the debian container > /pod-data/index.html"]
+      - name: shared-volume
+        mountPath: /pod-data
