--- a/exercises/07-defining-pod-probes/solution/hello-service.yaml
+++ b/exercises/07-defining-pod-probes/solution/hello-service.yaml
@@ -3,16 +3,17 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    run: hello
-  name: hello
+    app: hello-service
+  name: hello-service
 spec:
   ports:
-  - port: 3000
-    nodePort: 31000
+  - name: 3000-3000
+    nodePort: 30000
+    port: 3000
     protocol: TCP
     targetPort: 3000
   selector:
-    run: hello
+    run: hello-deployment
   type: NodePort
 status:
   loadBalancer: {}
