Update and rename deployment-with-probe.yaml to hello-deployment-with-probe.yaml

--- a/exercises/07-defining-pod-probes/solution/hello-deployment-with-probe.yaml
+++ b/exercises/07-defining-pod-probes/solution/hello-deployment-with-probe.yaml
@@ -3,23 +3,23 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    run: hello
-  name: hello
+    run: hello-deployment
+  name: hello-deployment
 spec:
   replicas: 3
   selector:
     matchLabels:
-      run: hello
+      run: hello-deployment
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        run: hello
+        run: hello-deployment
     spec:
       containers:
-      - image: felipecruz/nodejs-hello-world:1.0.0
-        name: hello
+      - image: localhost:32000/nodejs-hello-world:1.0.0
+        name: hello-deployment
         ports:
         - name: nodejs-port
           containerPort: 3000
@@ -32,6 +32,6 @@ spec:
           - name: POD_NAME
             valueFrom:
               fieldRef:
-                fieldPath: metadata.name        
+                fieldPath: metadata.name
         resources: {}
 status: {}
